--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -84,11 +84,9 @@ design pattern~\cite{reactcontributors2015}.
 
 Yet despite the emergence of the updated HTML5\index{HTML!HTML5|textbf} standard in 2011 and the recent successes of web frameworks like Angular\index{Angular|textbf} and React\index{React} in capturing developer attention, 
 a clear picture still did not exist of how web apps could achieve the encapsulated component model that had become prevalent in other areas of software engineering\index{software engineering}.
-That is, until engineers from Google\footnote{
-As of March 2015, Google's Chrome\index{Google!Google Chrome} browser is the most popular desktop browser~\cite{zachte2015}.}
+That is, until engineers from Google\footnote{As of March 2015, Google's Chrome\index{Google!Google Chrome} browser is the most popular desktop browser~\cite{zachte2015}.}
 \index{Google}
-and Mozilla\footnote{
-The Mozilla Foundation is the sponsor of the popular Firefox\index{Mozilla!Mozilla Firefox} web browser. It grew out of Netscape, whose Navigator browser helped bring the web to a mass audience.}
+and Mozilla\footnote{The Mozilla Foundation is the sponsor of the popular Firefox\index{Mozilla!Mozilla Firefox} web browser. It grew out of Netscape, whose Navigator browser helped bring the web to a mass audience.}
 \index{Mozilla} 
 and other organizations got together in 2012 under a W3C Web Applications Working Group\index{Web Applications Working Group}~\cite{w3c2015} 
 to draft a new standard called \textbf{Web Components} that will extend and enhance HTML5 in ways that could have a significant long-term impact~\cite{yveslafon2015}. 
