Create a version without an index, per request of Renee Babcock

--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -478,7 +478,7 @@ My analysis shows that Web Components successfully address many of the key struc
 
 % \include{chapter-appendix3}
 
-\printindex{}
+% \printindex{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Generate the bibliography.					     %
